// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Post Screen is loading 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Post
    comments={
      Array [
        Object {
          "author": "Rowe",
          "content": "Minim exercitation aute non incididunt occaecat ex et culpa quis nisi cupidatat sit exercitation in. Culpa tempor aute tempor esse excepteur labore commodo qui Lorem consectetur commodo. Cillum ullamco sunt pariatur et aliquip aliqua nulla ut dolor. Id sunt incididunt irure id eiusmod sit do incididunt velit fugiat. Velit veniam officia cupidatat duis tempor cillum commodo non eiusmod aliquip ad sint ad.
Esse est occaecat consectetur pariatur incididunt cupidatat minim sit dolor irure. Velit occaecat elit ipsum officia adipisicing nisi duis. Do aliqua laborum nisi nostrud consectetur labore non anim duis minim esse sit officia. Aute elit quis amet Lorem esse amet elit est veniam. Amet dolore ea ea elit pariatur. Lorem sunt nulla nisi et in reprehenderit nostrud ea non aliquip velit dolor. Magna consequat laboris nisi elit.
Dolore ut reprehenderit tempor eu in commodo nisi enim pariatur et. Nostrud nulla sit ut laborum excepteur irure laborum amet eiusmod. Ullamco fugiat ipsum non nulla enim nostrud. Magna elit ea tempor eu eu voluptate enim quis voluptate.
Eiusmod esse excepteur ex non incididunt proident in occaecat non. Veniam culpa occaecat ullamco sint fugiat aliqua irure eiusmod labore. Deserunt ullamco occaecat nisi occaecat. Officia cillum ipsum aute Lorem enim reprehenderit labore id dolor eiusmod non labore consectetur. Mollit consectetur esse sunt commodo qui commodo et non laborum quis sit esse. Ea sint in ad laborum adipisicing ea nostrud ut. Voluptate labore dolore consectetur irure Lorem amet dolore do qui adipisicing.
Sunt velit duis reprehenderit laboris ut ex culpa voluptate amet est ex veniam nostrud. Ad exercitation cillum aliqua tempor amet velit ullamco est cupidatat deserunt excepteur mollit. Voluptate culpa incididunt dolor officia minim eiusmod consectetur eu elit minim. Enim nostrud exercitation aliquip labore mollit ullamco consequat sit nostrud aliquip officia magna. Reprehenderit velit est commodo ex in ad occaecat aute enim labore nulla sit proident sit. In ipsum esse adipisicing proident nulla culpa et voluptate est. Nulla tempor tempor sint laboris deserunt laboris ea sit voluptate ad reprehenderit duis.
",
          "id": "5c448f33bb8ea03c926d544a",
          "timestamp": "Thu Sep 05 2013 03:05:38 GMT+0800 (Hong Kong Standard Time)",
        },
        Object {
          "author": "Ford",
          "content": "Ut aliqua nostrud labore occaecat. Aute qui incididunt id esse deserunt sint occaecat occaecat id quis magna cupidatat. Dolor excepteur laborum irure excepteur.
Qui do qui sunt sit consectetur. Fugiat commodo proident incididunt dolor in ipsum ipsum dolor aliquip id. Id nulla adipisicing anim labore dolore Lorem quis est.
Voluptate dolore consectetur commodo aliqua ea minim ex deserunt commodo esse eu ad sit excepteur. Incididunt nostrud sunt sint nisi pariatur duis aliquip laborum amet ea dolor cillum consectetur. Elit cillum cupidatat amet consequat occaecat id aliqua et ut ut ut occaecat nulla ut. Labore quis dolor sit deserunt amet esse consectetur laboris minim deserunt in nulla commodo. Magna do minim in consequat voluptate magna reprehenderit amet esse cillum nisi qui elit adipisicing. Ut veniam est anim laboris Lorem commodo ex sit qui sit amet ex non. Proident in proident ipsum irure excepteur duis labore esse enim exercitation laboris.
Deserunt quis velit fugiat ea aliquip laborum do. Nulla deserunt laborum est ut reprehenderit minim. Reprehenderit quis adipisicing nostrud nisi amet dolore excepteur proident pariatur sit ex proident aute. Reprehenderit aliqua ipsum incididunt duis. Sint dolor incididunt ad excepteur ex est duis. Consequat minim culpa dolor est aliqua nisi commodo ex sint ipsum do. Anim veniam tempor incididunt mollit eiusmod excepteur in voluptate ad pariatur.
Eiusmod velit duis deserunt duis ut ad labore. In esse dolor sunt est culpa eiusmod officia velit deserunt anim eu tempor. Duis aliqua nulla do officia. Cillum proident velit anim aute cupidatat. Tempor anim magna culpa aute. Cupidatat ad nisi voluptate eu do mollit aute tempor et qui ut esse elit.
",
          "id": "5c448f33ee8320265f5febe8",
          "timestamp": "Sat Jul 30 1983 22:16:17 GMT+0800 (Hong Kong Standard Time)",
        },
        Object {
          "content": "
__Advertisement :)__

- __[pica](https://nodeca.github.io/pica/demo/)__ - high quality and fast image
  resize in browser.
- __[babelfish](https://github.com/nodeca/babelfish/)__ - developer friendly
  i18n with plurals support and easy syntax.

You will like those projects!

---

# h1 Heading 8-)
## h2 Heading
### h3 Heading
#### h4 Heading
##### h5 Heading
###### h6 Heading


## Horizontal Rules

___

---

***


## Typographic replacements

Enable typographer option to see result.

(c) (C) (r) (R) (tm) (TM) (p) (P) +-

test.. test... test..... test?..... test!....

!!!!!! ???? ,,  -- ---

\\"Smartypants, double quotes\\" and 'single quotes'
    ",
          "id": "5c448f33fa0a35cc3773e369",
          "timestamp": "Fri Feb 04 2011 13:54:37 GMT+0800 (Hong Kong Standard Time)",
        },
        Object {
          "author": "Ferguson",
          "content": "
## Emphasis

**This is bold text**

__This is bold text__

*This is italic text*

_This is italic text_

~~Strikethrough~~


## Blockquotes

> Blockquotes can also be nested...
>> ...by using additional greater-than signs right next to each other...
> > > ...or with spaces between arrows.

## Lists

Unordered

+ Create a list by starting a line with \`+\`, \`-\`, or \`*\`
+ Sub-lists are made by indenting 2 spaces:
  - Marker character change forces new list start:
    * Ac tristique libero volutpat at
    + Facilisis in pretium nisl aliquet
    - Nulla volutpat aliquam velit
+ Very easy!

Ordered

1. Lorem ipsum dolor sit amet
2. Consectetur adipiscing elit
3. Integer molestie lorem at massa


1. You can use sequential numbers...
1. ...or keep all the numbers as \`1.\`

Start numbering with offset:

57. foo
1. bar
    ",
          "id": "5c448f334fcf12a88c4fd0f1",
          "timestamp": "Wed Jan 12 2011 21:31:56 GMT+0800 (Hong Kong Standard Time)",
        },
        Object {
          "author": "Ida",
          "content": "
## Code

Inline \`code\`

Indented code

    // Some comments
    line 1 of code
    line 2 of code
    line 3 of code


Block code \\"fences\\"

\`\`\`
Sample text here...
\`\`\`

Syntax highlighting

\`\`\` js
var foo = function (bar) {
  return bar++;
};

console.log(foo(5));
\`\`\`

## Tables

| Option | Description |
| ------ | ----------- |
| data   | path to data files to supply the data that will be passed into templates. |
| engine | engine to be used for processing templates. Handlebars is the default. |
| ext    | extension to be used for dest files. |

Right aligned columns

| Option | Description |
| ------:| -----------:|
| data   | path to data files to supply the data that will be passed into templates. |
| engine | engine to be used for processing templates. Handlebars is the default. |
| ext    | extension to be used for dest files. |


## Links

[link text](http://dev.nodeca.com)

[link with title](http://nodeca.github.io/pica/demo/ \\"title text!\\")

Autoconverted link https://github.com/nodeca/pica (enable linkify to see)


## Images

![Minion](https://octodex.github.com/images/minion.png)
![Stormtroopocat](https://octodex.github.com/images/stormtroopocat.jpg \\"The Stormtroopocat\\")

Like links, Images also have a footnote style syntax

![Alt text][id]

With a reference later in the document defining the URL location:

[id]: https://octodex.github.com/images/dojocat.jpg  \\"The Dojocat\\"
    ",
          "id": "5c448f3390966b8261eff42b",
          "timestamp": "Fri May 11 1984 09:08:52 GMT+0800 (Hong Kong Standard Time)",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <PostHeaderMenu
          onRef={[Function]}
          parentHeight={0}
          position={
            Object {
              "x": 750,
              "y": 0,
            }
          }
        />,
        <Header
          animated={false}
          backable={true}
          onLayout={[Function]}
          onRightPress={[Function]}
          rightIcon="more"
          rightStyle={
            Object {
              "color": "#4E4A47",
            }
          }
          subtitle={null}
          title={
            Object {
              "color": "#2F78B0",
              "context": "",
              "numberOfLines": 4,
            }
          }
        />,
        <PostSwipable
          comments={
            Array [
              Object {
                "author": "Rowe",
                "content": "Minim exercitation aute non incididunt occaecat ex et culpa quis nisi cupidatat sit exercitation in. Culpa tempor aute tempor esse excepteur labore commodo qui Lorem consectetur commodo. Cillum ullamco sunt pariatur et aliquip aliqua nulla ut dolor. Id sunt incididunt irure id eiusmod sit do incididunt velit fugiat. Velit veniam officia cupidatat duis tempor cillum commodo non eiusmod aliquip ad sint ad.
Esse est occaecat consectetur pariatur incididunt cupidatat minim sit dolor irure. Velit occaecat elit ipsum officia adipisicing nisi duis. Do aliqua laborum nisi nostrud consectetur labore non anim duis minim esse sit officia. Aute elit quis amet Lorem esse amet elit est veniam. Amet dolore ea ea elit pariatur. Lorem sunt nulla nisi et in reprehenderit nostrud ea non aliquip velit dolor. Magna consequat laboris nisi elit.
Dolore ut reprehenderit tempor eu in commodo nisi enim pariatur et. Nostrud nulla sit ut laborum excepteur irure laborum amet eiusmod. Ullamco fugiat ipsum non nulla enim nostrud. Magna elit ea tempor eu eu voluptate enim quis voluptate.
Eiusmod esse excepteur ex non incididunt proident in occaecat non. Veniam culpa occaecat ullamco sint fugiat aliqua irure eiusmod labore. Deserunt ullamco occaecat nisi occaecat. Officia cillum ipsum aute Lorem enim reprehenderit labore id dolor eiusmod non labore consectetur. Mollit consectetur esse sunt commodo qui commodo et non laborum quis sit esse. Ea sint in ad laborum adipisicing ea nostrud ut. Voluptate labore dolore consectetur irure Lorem amet dolore do qui adipisicing.
Sunt velit duis reprehenderit laboris ut ex culpa voluptate amet est ex veniam nostrud. Ad exercitation cillum aliqua tempor amet velit ullamco est cupidatat deserunt excepteur mollit. Voluptate culpa incididunt dolor officia minim eiusmod consectetur eu elit minim. Enim nostrud exercitation aliquip labore mollit ullamco consequat sit nostrud aliquip officia magna. Reprehenderit velit est commodo ex in ad occaecat aute enim labore nulla sit proident sit. In ipsum esse adipisicing proident nulla culpa et voluptate est. Nulla tempor tempor sint laboris deserunt laboris ea sit voluptate ad reprehenderit duis.
",
                "id": "5c448f33bb8ea03c926d544a",
                "timestamp": "Thu Sep 05 2013 03:05:38 GMT+0800 (Hong Kong Standard Time)",
              },
              Object {
                "author": "Ford",
                "content": "Ut aliqua nostrud labore occaecat. Aute qui incididunt id esse deserunt sint occaecat occaecat id quis magna cupidatat. Dolor excepteur laborum irure excepteur.
Qui do qui sunt sit consectetur. Fugiat commodo proident incididunt dolor in ipsum ipsum dolor aliquip id. Id nulla adipisicing anim labore dolore Lorem quis est.
Voluptate dolore consectetur commodo aliqua ea minim ex deserunt commodo esse eu ad sit excepteur. Incididunt nostrud sunt sint nisi pariatur duis aliquip laborum amet ea dolor cillum consectetur. Elit cillum cupidatat amet consequat occaecat id aliqua et ut ut ut occaecat nulla ut. Labore quis dolor sit deserunt amet esse consectetur laboris minim deserunt in nulla commodo. Magna do minim in consequat voluptate magna reprehenderit amet esse cillum nisi qui elit adipisicing. Ut veniam est anim laboris Lorem commodo ex sit qui sit amet ex non. Proident in proident ipsum irure excepteur duis labore esse enim exercitation laboris.
Deserunt quis velit fugiat ea aliquip laborum do. Nulla deserunt laborum est ut reprehenderit minim. Reprehenderit quis adipisicing nostrud nisi amet dolore excepteur proident pariatur sit ex proident aute. Reprehenderit aliqua ipsum incididunt duis. Sint dolor incididunt ad excepteur ex est duis. Consequat minim culpa dolor est aliqua nisi commodo ex sint ipsum do. Anim veniam tempor incididunt mollit eiusmod excepteur in voluptate ad pariatur.
Eiusmod velit duis deserunt duis ut ad labore. In esse dolor sunt est culpa eiusmod officia velit deserunt anim eu tempor. Duis aliqua nulla do officia. Cillum proident velit anim aute cupidatat. Tempor anim magna culpa aute. Cupidatat ad nisi voluptate eu do mollit aute tempor et qui ut esse elit.
",
                "id": "5c448f33ee8320265f5febe8",
                "timestamp": "Sat Jul 30 1983 22:16:17 GMT+0800 (Hong Kong Standard Time)",
              },
              Object {
                "content": "
__Advertisement :)__

- __[pica](https://nodeca.github.io/pica/demo/)__ - high quality and fast image
  resize in browser.
- __[babelfish](https://github.com/nodeca/babelfish/)__ - developer friendly
  i18n with plurals support and easy syntax.

You will like those projects!

---

# h1 Heading 8-)
## h2 Heading
### h3 Heading
#### h4 Heading
##### h5 Heading
###### h6 Heading


## Horizontal Rules

___

---

***


## Typographic replacements

Enable typographer option to see result.

(c) (C) (r) (R) (tm) (TM) (p) (P) +-

test.. test... test..... test?..... test!....

!!!!!! ???? ,,  -- ---

\\"Smartypants, double quotes\\" and 'single quotes'
    ",
                "id": "5c448f33fa0a35cc3773e369",
                "timestamp": "Fri Feb 04 2011 13:54:37 GMT+0800 (Hong Kong Standard Time)",
              },
              Object {
                "author": "Ferguson",
                "content": "
## Emphasis

**This is bold text**

__This is bold text__

*This is italic text*

_This is italic text_

~~Strikethrough~~


## Blockquotes

> Blockquotes can also be nested...
>> ...by using additional greater-than signs right next to each other...
> > > ...or with spaces between arrows.

## Lists

Unordered

+ Create a list by starting a line with \`+\`, \`-\`, or \`*\`
+ Sub-lists are made by indenting 2 spaces:
  - Marker character change forces new list start:
    * Ac tristique libero volutpat at
    + Facilisis in pretium nisl aliquet
    - Nulla volutpat aliquam velit
+ Very easy!

Ordered

1. Lorem ipsum dolor sit amet
2. Consectetur adipiscing elit
3. Integer molestie lorem at massa


1. You can use sequential numbers...
1. ...or keep all the numbers as \`1.\`

Start numbering with offset:

57. foo
1. bar
    ",
                "id": "5c448f334fcf12a88c4fd0f1",
                "timestamp": "Wed Jan 12 2011 21:31:56 GMT+0800 (Hong Kong Standard Time)",
              },
              Object {
                "author": "Ida",
                "content": "
## Code

Inline \`code\`

Indented code

    // Some comments
    line 1 of code
    line 2 of code
    line 3 of code


Block code \\"fences\\"

\`\`\`
Sample text here...
\`\`\`

Syntax highlighting

\`\`\` js
var foo = function (bar) {
  return bar++;
};

console.log(foo(5));
\`\`\`

## Tables

| Option | Description |
| ------ | ----------- |
| data   | path to data files to supply the data that will be passed into templates. |
| engine | engine to be used for processing templates. Handlebars is the default. |
| ext    | extension to be used for dest files. |

Right aligned columns

| Option | Description |
| ------:| -----------:|
| data   | path to data files to supply the data that will be passed into templates. |
| engine | engine to be used for processing templates. Handlebars is the default. |
| ext    | extension to be used for dest files. |


## Links

[link text](http://dev.nodeca.com)

[link with title](http://nodeca.github.io/pica/demo/ \\"title text!\\")

Autoconverted link https://github.com/nodeca/pica (enable linkify to see)


## Images

![Minion](https://octodex.github.com/images/minion.png)
![Stormtroopocat](https://octodex.github.com/images/stormtroopocat.jpg \\"The Stormtroopocat\\")

Like links, Images also have a footnote style syntax

![Alt text][id]

With a reference later in the document defining the URL location:

[id]: https://octodex.github.com/images/dojocat.jpg  \\"The Dojocat\\"
    ",
                "id": "5c448f3390966b8261eff42b",
                "timestamp": "Fri May 11 1984 09:08:52 GMT+0800 (Hong Kong Standard Time)",
              },
            ]
          }
          onChangeTab={[Function]}
          onRef={[Function]}
        />,
        <PostFooter
          firstPage={true}
          lastPage={false}
          onPageChangeThunk={[Function]}
        />,
      ],
      "virtual": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "native": undefined,
          "onRef": [Function],
          "parentHeight": 0,
          "position": Object {
            "x": 750,
            "y": 0,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "animated": false,
          "backable": true,
          "onLayout": [Function],
          "onRightPress": [Function],
          "rightIcon": "more",
          "rightStyle": Object {
            "color": "#4E4A47",
          },
          "subtitle": null,
          "title": Object {
            "color": "#2F78B0",
            "context": "",
            "numberOfLines": 4,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "comments": Array [
            Object {
              "author": "Rowe",
              "content": "Minim exercitation aute non incididunt occaecat ex et culpa quis nisi cupidatat sit exercitation in. Culpa tempor aute tempor esse excepteur labore commodo qui Lorem consectetur commodo. Cillum ullamco sunt pariatur et aliquip aliqua nulla ut dolor. Id sunt incididunt irure id eiusmod sit do incididunt velit fugiat. Velit veniam officia cupidatat duis tempor cillum commodo non eiusmod aliquip ad sint ad.
Esse est occaecat consectetur pariatur incididunt cupidatat minim sit dolor irure. Velit occaecat elit ipsum officia adipisicing nisi duis. Do aliqua laborum nisi nostrud consectetur labore non anim duis minim esse sit officia. Aute elit quis amet Lorem esse amet elit est veniam. Amet dolore ea ea elit pariatur. Lorem sunt nulla nisi et in reprehenderit nostrud ea non aliquip velit dolor. Magna consequat laboris nisi elit.
Dolore ut reprehenderit tempor eu in commodo nisi enim pariatur et. Nostrud nulla sit ut laborum excepteur irure laborum amet eiusmod. Ullamco fugiat ipsum non nulla enim nostrud. Magna elit ea tempor eu eu voluptate enim quis voluptate.
Eiusmod esse excepteur ex non incididunt proident in occaecat non. Veniam culpa occaecat ullamco sint fugiat aliqua irure eiusmod labore. Deserunt ullamco occaecat nisi occaecat. Officia cillum ipsum aute Lorem enim reprehenderit labore id dolor eiusmod non labore consectetur. Mollit consectetur esse sunt commodo qui commodo et non laborum quis sit esse. Ea sint in ad laborum adipisicing ea nostrud ut. Voluptate labore dolore consectetur irure Lorem amet dolore do qui adipisicing.
Sunt velit duis reprehenderit laboris ut ex culpa voluptate amet est ex veniam nostrud. Ad exercitation cillum aliqua tempor amet velit ullamco est cupidatat deserunt excepteur mollit. Voluptate culpa incididunt dolor officia minim eiusmod consectetur eu elit minim. Enim nostrud exercitation aliquip labore mollit ullamco consequat sit nostrud aliquip officia magna. Reprehenderit velit est commodo ex in ad occaecat aute enim labore nulla sit proident sit. In ipsum esse adipisicing proident nulla culpa et voluptate est. Nulla tempor tempor sint laboris deserunt laboris ea sit voluptate ad reprehenderit duis.
",
              "id": "5c448f33bb8ea03c926d544a",
              "timestamp": "Thu Sep 05 2013 03:05:38 GMT+0800 (Hong Kong Standard Time)",
            },
            Object {
              "author": "Ford",
              "content": "Ut aliqua nostrud labore occaecat. Aute qui incididunt id esse deserunt sint occaecat occaecat id quis magna cupidatat. Dolor excepteur laborum irure excepteur.
Qui do qui sunt sit consectetur. Fugiat commodo proident incididunt dolor in ipsum ipsum dolor aliquip id. Id nulla adipisicing anim labore dolore Lorem quis est.
Voluptate dolore consectetur commodo aliqua ea minim ex deserunt commodo esse eu ad sit excepteur. Incididunt nostrud sunt sint nisi pariatur duis aliquip laborum amet ea dolor cillum consectetur. Elit cillum cupidatat amet consequat occaecat id aliqua et ut ut ut occaecat nulla ut. Labore quis dolor sit deserunt amet esse consectetur laboris minim deserunt in nulla commodo. Magna do minim in consequat voluptate magna reprehenderit amet esse cillum nisi qui elit adipisicing. Ut veniam est anim laboris Lorem commodo ex sit qui sit amet ex non. Proident in proident ipsum irure excepteur duis labore esse enim exercitation laboris.
Deserunt quis velit fugiat ea aliquip laborum do. Nulla deserunt laborum est ut reprehenderit minim. Reprehenderit quis adipisicing nostrud nisi amet dolore excepteur proident pariatur sit ex proident aute. Reprehenderit aliqua ipsum incididunt duis. Sint dolor incididunt ad excepteur ex est duis. Consequat minim culpa dolor est aliqua nisi commodo ex sint ipsum do. Anim veniam tempor incididunt mollit eiusmod excepteur in voluptate ad pariatur.
Eiusmod velit duis deserunt duis ut ad labore. In esse dolor sunt est culpa eiusmod officia velit deserunt anim eu tempor. Duis aliqua nulla do officia. Cillum proident velit anim aute cupidatat. Tempor anim magna culpa aute. Cupidatat ad nisi voluptate eu do mollit aute tempor et qui ut esse elit.
",
              "id": "5c448f33ee8320265f5febe8",
              "timestamp": "Sat Jul 30 1983 22:16:17 GMT+0800 (Hong Kong Standard Time)",
            },
            Object {
              "content": "
__Advertisement :)__

- __[pica](https://nodeca.github.io/pica/demo/)__ - high quality and fast image
  resize in browser.
- __[babelfish](https://github.com/nodeca/babelfish/)__ - developer friendly
  i18n with plurals support and easy syntax.

You will like those projects!

---

# h1 Heading 8-)
## h2 Heading
### h3 Heading
#### h4 Heading
##### h5 Heading
###### h6 Heading


## Horizontal Rules

___

---

***


## Typographic replacements

Enable typographer option to see result.

(c) (C) (r) (R) (tm) (TM) (p) (P) +-

test.. test... test..... test?..... test!....

!!!!!! ???? ,,  -- ---

\\"Smartypants, double quotes\\" and 'single quotes'
    ",
              "id": "5c448f33fa0a35cc3773e369",
              "timestamp": "Fri Feb 04 2011 13:54:37 GMT+0800 (Hong Kong Standard Time)",
            },
            Object {
              "author": "Ferguson",
              "content": "
## Emphasis

**This is bold text**

__This is bold text__

*This is italic text*

_This is italic text_

~~Strikethrough~~


## Blockquotes

> Blockquotes can also be nested...
>> ...by using additional greater-than signs right next to each other...
> > > ...or with spaces between arrows.

## Lists

Unordered

+ Create a list by starting a line with \`+\`, \`-\`, or \`*\`
+ Sub-lists are made by indenting 2 spaces:
  - Marker character change forces new list start:
    * Ac tristique libero volutpat at
    + Facilisis in pretium nisl aliquet
    - Nulla volutpat aliquam velit
+ Very easy!

Ordered

1. Lorem ipsum dolor sit amet
2. Consectetur adipiscing elit
3. Integer molestie lorem at massa


1. You can use sequential numbers...
1. ...or keep all the numbers as \`1.\`

Start numbering with offset:

57. foo
1. bar
    ",
              "id": "5c448f334fcf12a88c4fd0f1",
              "timestamp": "Wed Jan 12 2011 21:31:56 GMT+0800 (Hong Kong Standard Time)",
            },
            Object {
              "author": "Ida",
              "content": "
## Code

Inline \`code\`

Indented code

    // Some comments
    line 1 of code
    line 2 of code
    line 3 of code


Block code \\"fences\\"

\`\`\`
Sample text here...
\`\`\`

Syntax highlighting

\`\`\` js
var foo = function (bar) {
  return bar++;
};

console.log(foo(5));
\`\`\`

## Tables

| Option | Description |
| ------ | ----------- |
| data   | path to data files to supply the data that will be passed into templates. |
| engine | engine to be used for processing templates. Handlebars is the default. |
| ext    | extension to be used for dest files. |

Right aligned columns

| Option | Description |
| ------:| -----------:|
| data   | path to data files to supply the data that will be passed into templates. |
| engine | engine to be used for processing templates. Handlebars is the default. |
| ext    | extension to be used for dest files. |


## Links

[link text](http://dev.nodeca.com)

[link with title](http://nodeca.github.io/pica/demo/ \\"title text!\\")

Autoconverted link https://github.com/nodeca/pica (enable linkify to see)


## Images

![Minion](https://octodex.github.com/images/minion.png)
![Stormtroopocat](https://octodex.github.com/images/stormtroopocat.jpg \\"The Stormtroopocat\\")

Like links, Images also have a footnote style syntax

![Alt text][id]

With a reference later in the document defining the URL location:

[id]: https://octodex.github.com/images/dojocat.jpg  \\"The Dojocat\\"
    ",
              "id": "5c448f3390966b8261eff42b",
              "timestamp": "Fri May 11 1984 09:08:52 GMT+0800 (Hong Kong Standard Time)",
            },
          ],
          "onChangeTab": [Function],
          "onRef": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "firstPage": true,
          "lastPage": false,
          "onPageChangeThunk": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <PostHeaderMenu
            onRef={[Function]}
            parentHeight={0}
            position={
              Object {
                "x": 750,
                "y": 0,
              }
            }
          />,
          <Header
            animated={false}
            backable={true}
            onLayout={[Function]}
            onRightPress={[Function]}
            rightIcon="more"
            rightStyle={
              Object {
                "color": "#4E4A47",
              }
            }
            subtitle={null}
            title={
              Object {
                "color": "#2F78B0",
                "context": "",
                "numberOfLines": 4,
              }
            }
          />,
          <PostSwipable
            comments={
              Array [
                Object {
                  "author": "Rowe",
                  "content": "Minim exercitation aute non incididunt occaecat ex et culpa quis nisi cupidatat sit exercitation in. Culpa tempor aute tempor esse excepteur labore commodo qui Lorem consectetur commodo. Cillum ullamco sunt pariatur et aliquip aliqua nulla ut dolor. Id sunt incididunt irure id eiusmod sit do incididunt velit fugiat. Velit veniam officia cupidatat duis tempor cillum commodo non eiusmod aliquip ad sint ad.
Esse est occaecat consectetur pariatur incididunt cupidatat minim sit dolor irure. Velit occaecat elit ipsum officia adipisicing nisi duis. Do aliqua laborum nisi nostrud consectetur labore non anim duis minim esse sit officia. Aute elit quis amet Lorem esse amet elit est veniam. Amet dolore ea ea elit pariatur. Lorem sunt nulla nisi et in reprehenderit nostrud ea non aliquip velit dolor. Magna consequat laboris nisi elit.
Dolore ut reprehenderit tempor eu in commodo nisi enim pariatur et. Nostrud nulla sit ut laborum excepteur irure laborum amet eiusmod. Ullamco fugiat ipsum non nulla enim nostrud. Magna elit ea tempor eu eu voluptate enim quis voluptate.
Eiusmod esse excepteur ex non incididunt proident in occaecat non. Veniam culpa occaecat ullamco sint fugiat aliqua irure eiusmod labore. Deserunt ullamco occaecat nisi occaecat. Officia cillum ipsum aute Lorem enim reprehenderit labore id dolor eiusmod non labore consectetur. Mollit consectetur esse sunt commodo qui commodo et non laborum quis sit esse. Ea sint in ad laborum adipisicing ea nostrud ut. Voluptate labore dolore consectetur irure Lorem amet dolore do qui adipisicing.
Sunt velit duis reprehenderit laboris ut ex culpa voluptate amet est ex veniam nostrud. Ad exercitation cillum aliqua tempor amet velit ullamco est cupidatat deserunt excepteur mollit. Voluptate culpa incididunt dolor officia minim eiusmod consectetur eu elit minim. Enim nostrud exercitation aliquip labore mollit ullamco consequat sit nostrud aliquip officia magna. Reprehenderit velit est commodo ex in ad occaecat aute enim labore nulla sit proident sit. In ipsum esse adipisicing proident nulla culpa et voluptate est. Nulla tempor tempor sint laboris deserunt laboris ea sit voluptate ad reprehenderit duis.
",
                  "id": "5c448f33bb8ea03c926d544a",
                  "timestamp": "Thu Sep 05 2013 03:05:38 GMT+0800 (Hong Kong Standard Time)",
                },
                Object {
                  "author": "Ford",
                  "content": "Ut aliqua nostrud labore occaecat. Aute qui incididunt id esse deserunt sint occaecat occaecat id quis magna cupidatat. Dolor excepteur laborum irure excepteur.
Qui do qui sunt sit consectetur. Fugiat commodo proident incididunt dolor in ipsum ipsum dolor aliquip id. Id nulla adipisicing anim labore dolore Lorem quis est.
Voluptate dolore consectetur commodo aliqua ea minim ex deserunt commodo esse eu ad sit excepteur. Incididunt nostrud sunt sint nisi pariatur duis aliquip laborum amet ea dolor cillum consectetur. Elit cillum cupidatat amet consequat occaecat id aliqua et ut ut ut occaecat nulla ut. Labore quis dolor sit deserunt amet esse consectetur laboris minim deserunt in nulla commodo. Magna do minim in consequat voluptate magna reprehenderit amet esse cillum nisi qui elit adipisicing. Ut veniam est anim laboris Lorem commodo ex sit qui sit amet ex non. Proident in proident ipsum irure excepteur duis labore esse enim exercitation laboris.
Deserunt quis velit fugiat ea aliquip laborum do. Nulla deserunt laborum est ut reprehenderit minim. Reprehenderit quis adipisicing nostrud nisi amet dolore excepteur proident pariatur sit ex proident aute. Reprehenderit aliqua ipsum incididunt duis. Sint dolor incididunt ad excepteur ex est duis. Consequat minim culpa dolor est aliqua nisi commodo ex sint ipsum do. Anim veniam tempor incididunt mollit eiusmod excepteur in voluptate ad pariatur.
Eiusmod velit duis deserunt duis ut ad labore. In esse dolor sunt est culpa eiusmod officia velit deserunt anim eu tempor. Duis aliqua nulla do officia. Cillum proident velit anim aute cupidatat. Tempor anim magna culpa aute. Cupidatat ad nisi voluptate eu do mollit aute tempor et qui ut esse elit.
",
                  "id": "5c448f33ee8320265f5febe8",
                  "timestamp": "Sat Jul 30 1983 22:16:17 GMT+0800 (Hong Kong Standard Time)",
                },
                Object {
                  "content": "
__Advertisement :)__

- __[pica](https://nodeca.github.io/pica/demo/)__ - high quality and fast image
  resize in browser.
- __[babelfish](https://github.com/nodeca/babelfish/)__ - developer friendly
  i18n with plurals support and easy syntax.

You will like those projects!

---

# h1 Heading 8-)
## h2 Heading
### h3 Heading
#### h4 Heading
##### h5 Heading
###### h6 Heading


## Horizontal Rules

___

---

***


## Typographic replacements

Enable typographer option to see result.

(c) (C) (r) (R) (tm) (TM) (p) (P) +-

test.. test... test..... test?..... test!....

!!!!!! ???? ,,  -- ---

\\"Smartypants, double quotes\\" and 'single quotes'
    ",
                  "id": "5c448f33fa0a35cc3773e369",
                  "timestamp": "Fri Feb 04 2011 13:54:37 GMT+0800 (Hong Kong Standard Time)",
                },
                Object {
                  "author": "Ferguson",
                  "content": "
## Emphasis

**This is bold text**

__This is bold text__

*This is italic text*

_This is italic text_

~~Strikethrough~~


## Blockquotes

> Blockquotes can also be nested...
>> ...by using additional greater-than signs right next to each other...
> > > ...or with spaces between arrows.

## Lists

Unordered

+ Create a list by starting a line with \`+\`, \`-\`, or \`*\`
+ Sub-lists are made by indenting 2 spaces:
  - Marker character change forces new list start:
    * Ac tristique libero volutpat at
    + Facilisis in pretium nisl aliquet
    - Nulla volutpat aliquam velit
+ Very easy!

Ordered

1. Lorem ipsum dolor sit amet
2. Consectetur adipiscing elit
3. Integer molestie lorem at massa


1. You can use sequential numbers...
1. ...or keep all the numbers as \`1.\`

Start numbering with offset:

57. foo
1. bar
    ",
                  "id": "5c448f334fcf12a88c4fd0f1",
                  "timestamp": "Wed Jan 12 2011 21:31:56 GMT+0800 (Hong Kong Standard Time)",
                },
                Object {
                  "author": "Ida",
                  "content": "
## Code

Inline \`code\`

Indented code

    // Some comments
    line 1 of code
    line 2 of code
    line 3 of code


Block code \\"fences\\"

\`\`\`
Sample text here...
\`\`\`

Syntax highlighting

\`\`\` js
var foo = function (bar) {
  return bar++;
};

console.log(foo(5));
\`\`\`

## Tables

| Option | Description |
| ------ | ----------- |
| data   | path to data files to supply the data that will be passed into templates. |
| engine | engine to be used for processing templates. Handlebars is the default. |
| ext    | extension to be used for dest files. |

Right aligned columns

| Option | Description |
| ------:| -----------:|
| data   | path to data files to supply the data that will be passed into templates. |
| engine | engine to be used for processing templates. Handlebars is the default. |
| ext    | extension to be used for dest files. |


## Links

[link text](http://dev.nodeca.com)

[link with title](http://nodeca.github.io/pica/demo/ \\"title text!\\")

Autoconverted link https://github.com/nodeca/pica (enable linkify to see)


## Images

![Minion](https://octodex.github.com/images/minion.png)
![Stormtroopocat](https://octodex.github.com/images/stormtroopocat.jpg \\"The Stormtroopocat\\")

Like links, Images also have a footnote style syntax

![Alt text][id]

With a reference later in the document defining the URL location:

[id]: https://octodex.github.com/images/dojocat.jpg  \\"The Dojocat\\"
    ",
                  "id": "5c448f3390966b8261eff42b",
                  "timestamp": "Fri May 11 1984 09:08:52 GMT+0800 (Hong Kong Standard Time)",
                },
              ]
            }
            onChangeTab={[Function]}
            onRef={[Function]}
          />,
          <PostFooter
            firstPage={true}
            lastPage={false}
            onPageChangeThunk={[Function]}
          />,
        ],
        "virtual": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "native": undefined,
            "onRef": [Function],
            "parentHeight": 0,
            "position": Object {
              "x": 750,
              "y": 0,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "animated": false,
            "backable": true,
            "onLayout": [Function],
            "onRightPress": [Function],
            "rightIcon": "more",
            "rightStyle": Object {
              "color": "#4E4A47",
            },
            "subtitle": null,
            "title": Object {
              "color": "#2F78B0",
              "context": "",
              "numberOfLines": 4,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "comments": Array [
              Object {
                "author": "Rowe",
                "content": "Minim exercitation aute non incididunt occaecat ex et culpa quis nisi cupidatat sit exercitation in. Culpa tempor aute tempor esse excepteur labore commodo qui Lorem consectetur commodo. Cillum ullamco sunt pariatur et aliquip aliqua nulla ut dolor. Id sunt incididunt irure id eiusmod sit do incididunt velit fugiat. Velit veniam officia cupidatat duis tempor cillum commodo non eiusmod aliquip ad sint ad.
Esse est occaecat consectetur pariatur incididunt cupidatat minim sit dolor irure. Velit occaecat elit ipsum officia adipisicing nisi duis. Do aliqua laborum nisi nostrud consectetur labore non anim duis minim esse sit officia. Aute elit quis amet Lorem esse amet elit est veniam. Amet dolore ea ea elit pariatur. Lorem sunt nulla nisi et in reprehenderit nostrud ea non aliquip velit dolor. Magna consequat laboris nisi elit.
Dolore ut reprehenderit tempor eu in commodo nisi enim pariatur et. Nostrud nulla sit ut laborum excepteur irure laborum amet eiusmod. Ullamco fugiat ipsum non nulla enim nostrud. Magna elit ea tempor eu eu voluptate enim quis voluptate.
Eiusmod esse excepteur ex non incididunt proident in occaecat non. Veniam culpa occaecat ullamco sint fugiat aliqua irure eiusmod labore. Deserunt ullamco occaecat nisi occaecat. Officia cillum ipsum aute Lorem enim reprehenderit labore id dolor eiusmod non labore consectetur. Mollit consectetur esse sunt commodo qui commodo et non laborum quis sit esse. Ea sint in ad laborum adipisicing ea nostrud ut. Voluptate labore dolore consectetur irure Lorem amet dolore do qui adipisicing.
Sunt velit duis reprehenderit laboris ut ex culpa voluptate amet est ex veniam nostrud. Ad exercitation cillum aliqua tempor amet velit ullamco est cupidatat deserunt excepteur mollit. Voluptate culpa incididunt dolor officia minim eiusmod consectetur eu elit minim. Enim nostrud exercitation aliquip labore mollit ullamco consequat sit nostrud aliquip officia magna. Reprehenderit velit est commodo ex in ad occaecat aute enim labore nulla sit proident sit. In ipsum esse adipisicing proident nulla culpa et voluptate est. Nulla tempor tempor sint laboris deserunt laboris ea sit voluptate ad reprehenderit duis.
",
                "id": "5c448f33bb8ea03c926d544a",
                "timestamp": "Thu Sep 05 2013 03:05:38 GMT+0800 (Hong Kong Standard Time)",
              },
              Object {
                "author": "Ford",
                "content": "Ut aliqua nostrud labore occaecat. Aute qui incididunt id esse deserunt sint occaecat occaecat id quis magna cupidatat. Dolor excepteur laborum irure excepteur.
Qui do qui sunt sit consectetur. Fugiat commodo proident incididunt dolor in ipsum ipsum dolor aliquip id. Id nulla adipisicing anim labore dolore Lorem quis est.
Voluptate dolore consectetur commodo aliqua ea minim ex deserunt commodo esse eu ad sit excepteur. Incididunt nostrud sunt sint nisi pariatur duis aliquip laborum amet ea dolor cillum consectetur. Elit cillum cupidatat amet consequat occaecat id aliqua et ut ut ut occaecat nulla ut. Labore quis dolor sit deserunt amet esse consectetur laboris minim deserunt in nulla commodo. Magna do minim in consequat voluptate magna reprehenderit amet esse cillum nisi qui elit adipisicing. Ut veniam est anim laboris Lorem commodo ex sit qui sit amet ex non. Proident in proident ipsum irure excepteur duis labore esse enim exercitation laboris.
Deserunt quis velit fugiat ea aliquip laborum do. Nulla deserunt laborum est ut reprehenderit minim. Reprehenderit quis adipisicing nostrud nisi amet dolore excepteur proident pariatur sit ex proident aute. Reprehenderit aliqua ipsum incididunt duis. Sint dolor incididunt ad excepteur ex est duis. Consequat minim culpa dolor est aliqua nisi commodo ex sint ipsum do. Anim veniam tempor incididunt mollit eiusmod excepteur in voluptate ad pariatur.
Eiusmod velit duis deserunt duis ut ad labore. In esse dolor sunt est culpa eiusmod officia velit deserunt anim eu tempor. Duis aliqua nulla do officia. Cillum proident velit anim aute cupidatat. Tempor anim magna culpa aute. Cupidatat ad nisi voluptate eu do mollit aute tempor et qui ut esse elit.
",
                "id": "5c448f33ee8320265f5febe8",
                "timestamp": "Sat Jul 30 1983 22:16:17 GMT+0800 (Hong Kong Standard Time)",
              },
              Object {
                "content": "
__Advertisement :)__

- __[pica](https://nodeca.github.io/pica/demo/)__ - high quality and fast image
  resize in browser.
- __[babelfish](https://github.com/nodeca/babelfish/)__ - developer friendly
  i18n with plurals support and easy syntax.

You will like those projects!

---

# h1 Heading 8-)
## h2 Heading
### h3 Heading
#### h4 Heading
##### h5 Heading
###### h6 Heading


## Horizontal Rules

___

---

***


## Typographic replacements

Enable typographer option to see result.

(c) (C) (r) (R) (tm) (TM) (p) (P) +-

test.. test... test..... test?..... test!....

!!!!!! ???? ,,  -- ---

\\"Smartypants, double quotes\\" and 'single quotes'
    ",
                "id": "5c448f33fa0a35cc3773e369",
                "timestamp": "Fri Feb 04 2011 13:54:37 GMT+0800 (Hong Kong Standard Time)",
              },
              Object {
                "author": "Ferguson",
                "content": "
## Emphasis

**This is bold text**

__This is bold text__

*This is italic text*

_This is italic text_

~~Strikethrough~~


## Blockquotes

> Blockquotes can also be nested...
>> ...by using additional greater-than signs right next to each other...
> > > ...or with spaces between arrows.

## Lists

Unordered

+ Create a list by starting a line with \`+\`, \`-\`, or \`*\`
+ Sub-lists are made by indenting 2 spaces:
  - Marker character change forces new list start:
    * Ac tristique libero volutpat at
    + Facilisis in pretium nisl aliquet
    - Nulla volutpat aliquam velit
+ Very easy!

Ordered

1. Lorem ipsum dolor sit amet
2. Consectetur adipiscing elit
3. Integer molestie lorem at massa


1. You can use sequential numbers...
1. ...or keep all the numbers as \`1.\`

Start numbering with offset:

57. foo
1. bar
    ",
                "id": "5c448f334fcf12a88c4fd0f1",
                "timestamp": "Wed Jan 12 2011 21:31:56 GMT+0800 (Hong Kong Standard Time)",
              },
              Object {
                "author": "Ida",
                "content": "
## Code

Inline \`code\`

Indented code

    // Some comments
    line 1 of code
    line 2 of code
    line 3 of code


Block code \\"fences\\"

\`\`\`
Sample text here...
\`\`\`

Syntax highlighting

\`\`\` js
var foo = function (bar) {
  return bar++;
};

console.log(foo(5));
\`\`\`

## Tables

| Option | Description |
| ------ | ----------- |
| data   | path to data files to supply the data that will be passed into templates. |
| engine | engine to be used for processing templates. Handlebars is the default. |
| ext    | extension to be used for dest files. |

Right aligned columns

| Option | Description |
| ------:| -----------:|
| data   | path to data files to supply the data that will be passed into templates. |
| engine | engine to be used for processing templates. Handlebars is the default. |
| ext    | extension to be used for dest files. |


## Links

[link text](http://dev.nodeca.com)

[link with title](http://nodeca.github.io/pica/demo/ \\"title text!\\")

Autoconverted link https://github.com/nodeca/pica (enable linkify to see)


## Images

![Minion](https://octodex.github.com/images/minion.png)
![Stormtroopocat](https://octodex.github.com/images/stormtroopocat.jpg \\"The Stormtroopocat\\")

Like links, Images also have a footnote style syntax

![Alt text][id]

With a reference later in the document defining the URL location:

[id]: https://octodex.github.com/images/dojocat.jpg  \\"The Dojocat\\"
    ",
                "id": "5c448f3390966b8261eff42b",
                "timestamp": "Fri May 11 1984 09:08:52 GMT+0800 (Hong Kong Standard Time)",
              },
            ],
            "onChangeTab": [Function],
            "onRef": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "firstPage": true,
            "lastPage": false,
            "onPageChangeThunk": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Testing Post Screen renders as expected 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Post
    comments={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <PostHeaderMenu
          onRef={[Function]}
          parentHeight={0}
          position={
            Object {
              "x": 750,
              "y": 0,
            }
          }
        />,
        <Header
          animated={false}
          backable={true}
          onLayout={[Function]}
          onRightPress={[Function]}
          rightIcon="more"
          rightStyle={
            Object {
              "color": "#4E4A47",
            }
          }
          subtitle={null}
          title={
            Object {
              "color": "#2F78B0",
              "context": "",
              "numberOfLines": 4,
            }
          }
        />,
        <PostSwipable
          comments={Array []}
          onChangeTab={[Function]}
          onRef={[Function]}
        />,
        <PostFooter
          firstPage={true}
          lastPage={true}
          onPageChangeThunk={[Function]}
        />,
      ],
      "virtual": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "native": undefined,
          "onRef": [Function],
          "parentHeight": 0,
          "position": Object {
            "x": 750,
            "y": 0,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "animated": false,
          "backable": true,
          "onLayout": [Function],
          "onRightPress": [Function],
          "rightIcon": "more",
          "rightStyle": Object {
            "color": "#4E4A47",
          },
          "subtitle": null,
          "title": Object {
            "color": "#2F78B0",
            "context": "",
            "numberOfLines": 4,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "comments": Array [],
          "onChangeTab": [Function],
          "onRef": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "firstPage": true,
          "lastPage": true,
          "onPageChangeThunk": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <PostHeaderMenu
            onRef={[Function]}
            parentHeight={0}
            position={
              Object {
                "x": 750,
                "y": 0,
              }
            }
          />,
          <Header
            animated={false}
            backable={true}
            onLayout={[Function]}
            onRightPress={[Function]}
            rightIcon="more"
            rightStyle={
              Object {
                "color": "#4E4A47",
              }
            }
            subtitle={null}
            title={
              Object {
                "color": "#2F78B0",
                "context": "",
                "numberOfLines": 4,
              }
            }
          />,
          <PostSwipable
            comments={Array []}
            onChangeTab={[Function]}
            onRef={[Function]}
          />,
          <PostFooter
            firstPage={true}
            lastPage={true}
            onPageChangeThunk={[Function]}
          />,
        ],
        "virtual": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "native": undefined,
            "onRef": [Function],
            "parentHeight": 0,
            "position": Object {
              "x": 750,
              "y": 0,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "animated": false,
            "backable": true,
            "onLayout": [Function],
            "onRightPress": [Function],
            "rightIcon": "more",
            "rightStyle": Object {
              "color": "#4E4A47",
            },
            "subtitle": null,
            "title": Object {
              "color": "#2F78B0",
              "context": "",
              "numberOfLines": 4,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "comments": Array [],
            "onChangeTab": [Function],
            "onRef": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "firstPage": true,
            "lastPage": true,
            "onPageChangeThunk": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
